<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.educazione.QuizFragment"
    android:paddingTop="?attr/actionBarSize">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!-- Contenuto -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
            android:id="@+id/text_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/text_domanda1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:text="@string/domanda1"/>
        <RadioGroup
            android:id="@+id/domanda1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton android:id="@+id/rb_opzione11" android:text="@string/opzione11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:id="@+id/rb_opzione12" android:text="@string/opzione12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:id="@+id/rb_opzione13" android:text="@string/opzione13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:id="@+id/rb_opzione14" android:text="@string/opzione14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/radio_button_color"/>

        </RadioGroup>
        <TextView
            android:id="@+id/sol_domanda1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/soluzione1"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/text_domanda2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:text="@string/domanda2"/>
        <RadioGroup
            android:id="@+id/domanda2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton android:id="@+id/rb_opzione21" android:text="@string/opzione21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:id="@+id/rb_opzione22" android:text="@string/opzione22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:id="@+id/rb_opzione23" android:text="@string/opzione23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:id="@+id/rb_opzione24" android:text="@string/opzione24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/radio_button_color"/>

        </RadioGroup>
        <TextView
            android:id="@+id/sol_domanda2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/soluzione2"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/text_domanda3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:text="@string/domanda3"/>
        <RadioGroup
            android:id="@+id/domanda3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton android:id="@+id/rb_opzione31" android:text="@string/opzione31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:id="@+id/rb_opzione32" android:text="@string/opzione32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:id="@+id/rb_opzione33" android:text="@string/opzione33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/radio_button_color"/>
            <RadioButton android:id="@+id/rb_opzione34" android:text="@string/opzione34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/radio_button_color"/>

        </RadioGroup>
        <TextView
            android:id="@+id/sol_domanda3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/soluzione3"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/button_soluzione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/black"
            android:text="@string/button_soluzione"
            android:textColor="@color/teal_200" />

        <Button
            android:id="@+id/button_quizcompleto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/black"
            android:text="@string/button_finequiz"
            android:textColor="@color/teal_200"
            android:visibility="gone"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</FrameLayout>