<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_sentinella"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />



    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sentinella_galaciale"
        android:textColor="@color/darkblue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="8dp" />


    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accedi_per_continuare"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:layout_marginBottom="32dp" />


    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/email"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"/>


    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"/>


    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />


    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/non_hai_un_account_registrati"
        android:textSize="16sp"
        android:textColor="@color/darkblue"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>

