<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.educazione.educazioneFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
            android:id="@+id/text_educazione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/titolo_educazione1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/titolo_edu1"/>

        <TextView
            android:id="@+id/scheda_educazione1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/info_generali1"/>

        <TextView
            android:id="@+id/titolo_educazione2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/titolo_edu2"/>

        <TextView
            android:id="@+id/scheda_educazione2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/info_generali2"/>

        <TextView
            android:id="@+id/titolo_educazione3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/titolo_edu3"/>

        <TextView
            android:id="@+id/scheda_educazione3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/info_generali3"/>

        <TextView
            android:id="@+id/titolo_educazione4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/titolo_edu4"/>

        <TextView
            android:id="@+id/scheda_educazione4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/info_generali4"/>

        <Button
            android:id="@+id/button_educazione"
            android:textColor="@color/teal_200"
            android:backgroundTint="@color/black"
            android:text="@string/button_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    
</androidx.constraintlayout.widget.ConstraintLayout>